--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 <footer>
   <p>© 2026 SignalBrick. All rights reserved.</p>
 </footer>
+<hr>
 
+<h2>Product Showcase</h2>
+
+<img src="product.jpg" style="width:300px; border-radius:8px;">
+
+<p><strong>SignalBrick Cell Phone Signal Booster</strong></p>
+
+<p>Designed to improve cellular signal strength for stable voice calls and data performance.</p>
+  
 </body>
 </html>
