--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
 <p><strong>SignalBrick Cell Phone Signal Booster</strong></p>
 
 <p>Designed to improve cellular signal strength for stable voice calls and data performance.</p>
+<hr>
+
+<h2>Product Showcase</h2>
+
+<img src="product.jpg" style="width:300px; border-radius:8px;">
+
+<p><strong>SignalBrick Cell Phone Signal Booster</strong></p>
+
+<p>Designed to improve cellular signal strength for stable voice calls and data performance.</p>
   
 </body>
 </html>
